--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,9 @@ nu_plugin_to_sqlite = {version = "0.26.0", path = "./crates/nu_plugin_to_sqlite"
 nu_plugin_tree = {version = "0.26.0", path = "./crates/nu_plugin_tree", optional = true}
 nu_plugin_xpath = {version = "0.26.0", path = "./crates/nu_plugin_xpath", optional = true}
 
+# TODO move up
+nu_plugin_hdf = {version = "0.25.2", path = "./crates/nu_plugin_hdf", optional = true}
+
 # Required to bootstrap the main binary
 clap = "2.33.3"
 ctrlc = {version = "3.1.6", optional = true}
